# spdlog

include/: CMakeLists.txt
